added list of even numbers in range given

--- a/sum-even.html
+++ b/sum-even.html
@@ -18,5 +18,6 @@
     <h2>Result:</h2>
     <button id="result" class="input" type="button">Click here</button>
     <script src="sum-even.js"></script>
+    <div id="listOfEven"></div>
 </body>
 </html>
